# imageglass-ithmb-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  igplugin.json
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: CREDITS.md
scripts/: package.sh
src/: allocator.rs  buffer_registry.rs  lib.rs  logging.rs  types.rs
